--- a/css/Portfolio style.css
+++ b/css/Portfolio style.css
@@ -27,6 +27,13 @@ h1,h2,h3,h4,h5,h6{
     color: #24282b
 }
 
+#imgModalPreview{
+    -webkit-user-select: none;  
+    -moz-user-select: none;     
+    -ms-user-select: none;     
+    user-select: none;              
+}
+
 /* Navigation Bar Config Zone */
 
 #NameOnNav {
@@ -48,7 +55,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 @media only screen and (max-width: 800px){
-#ProfileAbout{
+.ProfileAbout{
     width: 280px;
     height: 280px;
 }
@@ -98,4 +105,38 @@ h1,h2,h3,h4,h5,h6{
 
 .MEHeaderConfig{
     font-size: 20px;
+}
+
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+ul.timeline > li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #d4d9df;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+ul.timeline > li#timelinenow:before {
+    border: 5px solid #22c0e8;
 }
