--- a/css/Portfolio style.css
+++ b/css/Portfolio style.css
@@ -34,6 +34,20 @@ h1,h2,h3,h4,h5,h6{
     user-select: none;              
 }
 
+.MEsubtext{
+    font-family: 'Prompt' sans-serif;
+    color: #333333;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.MEsubtext2{
+    color: #6c757d;
+    font-weight: 300;
+    font-size: 1.2rem;
+
+}
+
 /* Navigation Bar Config Zone */
 
 #NameOnNav {
@@ -139,4 +153,38 @@ ul.timeline > li:before {
 }
 ul.timeline > li#timelinenow:before {
     border: 5px solid #22c0e8;
+}
+
+/* ability Zone */
+.MyFBbtn{
+    background-color: #248aff;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: 0.3 ease-in-out;
+}
+
+.MyFBbtn:hover{
+    background-color: #0069e0;
+    color: #ffffff;
+    transition: 0.3s ease-in-out;
+}
+
+.MEfbicon{
+    color: #248aff;
+    font-size: 2rem;
+    transform: translateY(7.5px);
 }
