--- a/css/Portfolio style.css
+++ b/css/Portfolio style.css
@@ -155,6 +155,10 @@ ul.timeline > li#timelinenow:before {
     border: 5px solid #22c0e8;
 }
 
+.METextCONFIG1{
+    font-size: 20px;
+}
+
 /* ability Zone */
 .MyFBbtn{
     background-color: #248aff;
