--- a/css/Portfolio style.css
+++ b/css/Portfolio style.css
@@ -24,14 +24,18 @@ body{
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'Prompt', sans-serif;
-    color: #24282b
+    color: #24282b;
+}
+
+.METextDark{
+    color: #24282b;
 }
 
 #imgModalPreview{
     -webkit-user-select: none;  
     -moz-user-select: none;     
     -ms-user-select: none;     
-    user-select: none;              
+    user-select: none;    
 }
 
 .MEsubtext{
@@ -191,4 +195,97 @@ ul.timeline > li#timelinenow:before {
     color: #248aff;
     font-size: 2rem;
     transform: translateY(7.5px);
+}
+
+/* Achievement Zone */
+.MEtextGradian{
+    font-weight: bolder;
+    background : -webkit-radial-gradient(circle, rgb(255, 182, 46) 20%, rgb(255, 103, 32) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.MEHeaderConfig2{
+    font-size: 24px;
+}
+
+.ME-P-TextCONFIG1{
+    font-size: 22px;
+    line-height: 20pt;
+    color: #333333;
+}
+
+.ME-P-TextCONFIG2{
+    font-size: 18px;
+    line-height: 18pt;
+}
+
+.ME-P-TextCONFIG3{
+    font-size: 20px;
+    line-height: 20pt;
+}
+
+.MyGithubbtn{
+    background-color: #353535;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: 0.3 ease-in-out;
+}
+
+.MyGithubbtn:hover{
+    background-color: #242424;
+    color: #ffffff;
+    transition: 0.3s ease-in-out;
+}
+
+.MyYTbtn{
+    background-color: #d83535;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: 0.3 ease-in-out;
+}
+
+.MyYTbtn:hover{
+    background-color: #992727;
+    color: #ffffff;
+    transition: 0.3s ease-in-out;
+}
+
+.MEBoxBG{
+    background : -webkit-radial-gradient(circle, rgb(255, 182, 46) 20%, rgb(255, 103, 32) 100%);
+    color: #FFFFFF;
+    text-shadow: 0 1px 0 #616161, 0 2px 0 #474747, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+}
+
+.ACM-header-font{
+    font-size: 28px;
 }
